# deploy

./: Cargo.toml  README.md  build.rs  flake.nix
src/: cli.rs  main.rs  utils.rs
