[package]
name = "deploy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.52"
clap = { version = "3.0.0-rc.9", features = ["derive"] }
once_cell = "1.9.0"
serde = { version = "1.0.132", features = ["derive"] }
serde_json = "1.0.73"
ssh2 = "0.9.3"
tar = "0.4.38"
walkdir = "2.3.2"
whoami = "1.2.1"

[build-dependencies]
clap = { version = "3.0.0-rc.9", features = ["derive"] }
clap_generate = "3.0.0-rc.9"
